# opsys_2025

./: .gitignore  README.md  so1.txt  so2.txt  so4.txt
Client/: main.c
Kolejki/: CMakeLists.txt  zad1.c  zad2.c
MSGQUEUE/: CMakeLists.txt  README.md  master.c  slave.c  task.c  task.h
PIPE/: CMakeLists.txt  README.md  mini-shell.c
PROCESY2/: CMakeLists.txt  README.md  zad3.c
Procesy/: CMakeLists.txt
Procesy/src/: podmianka  podmianka.c  program.c
SO_5/: zad1.c  zad2.c
SO_6/: CMakeLists.txt  echo_serv.c  potoki.c
SO_7/: CMakeLists.txt  zad5.c  zad6.c  zad7.c
Semafory/: CMakeLists.txt  konsument.c  producent.c  typedefs.h  zad1.c
Server/: README.md  server.c
SharMem/: CMakeLists.txt  konsument.c  producent.c
Threads/: main.cpp
